# os_mai

kp/: graph.cpp  graph.h  main.cpp  parser.cpp  parser.h
laba1/: CMakeLists.txt  child1.cpp  child2.cpp  main.cpp
laba2/: os2.cpp
laba3/: os3.cpp
laba4/: CMakeLists.txt  main.cpp  maindynamic.cpp  pi.cpp  system.cpp  system.hpp
laba5-7/: CMakeLists.txt  computer.cpp  computer.hpp  manager.cpp  manager.hpp  socket.cpp  socket.hpp  tree.cpp  tree.hpp
